--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" href="./css/bulma.min.css">
   <link rel="stylesheet"
@@ -52,7 +53,7 @@
                   <a href="https://arxiv.org/pdf/2312.04465.pdf"
                      class="external-link button is-normal is-rounded is-dark">
                      <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fa fa-file-pdf-o"></i>
                     </span>
                     <span>Paper</span>
                   </a>
