--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/pdf/2312.04465.pdf"
+                  <a href="https://openaccess.thecvf.com/content/WACV2025/papers/Galanakis_FitDiff_Robust_Monocular_3D_Facial_Shape_and_Reflectance_Estimation_using_WACV_2025_paper.pdf"
                      class="external-link button is-normal is-rounded is-dark">
                      <span class="icon">
                       <i class="fa fa-file-pdf-o"></i>
@@ -58,8 +58,18 @@
                     <span>Paper</span>
                   </a>
                 </span>
-                <!-- arXiv Link. -->
                 <span class="link-block">
+                  <a href="https://openaccess.thecvf.com/content/WACV2025/supplemental/Galanakis_FitDiff_Robust_Monocular_WACV_2025_supplemental.pdf"
+                     class="external-link button is-normal is-rounded is-dark">
+                     <span class="icon">
+                      <i class="fa fa-file-pdf-o"></i>
+                    </span>
+                    <span>Supplemental Material</span>
+                  </a>
+                </span>
+
+                <!-- arXiv Link. -->
+<!--                 <span class="link-block">
                   <a href="https://arxiv.org/abs/2312.04465"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -67,7 +77,7 @@
                     </span>
                     <span>arXiv</span>
                   </a>
-                </span>
+                </span> -->
               </div>
             </div>
           </div>
