--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      <span class="icon">
                       <i class="fa fa-file-pdf-o"></i>
                     </span>
-                    <span>Supplemental Material</span>
+                    <span>Supp Material</span>
                   </a>
                 </span>
 
