--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </span>
 
                 <!-- arXiv Link. -->
-<!--                 <span class="link-block">
+                <span class="link-block">
                   <a href="https://arxiv.org/abs/2312.04465"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -77,7 +77,7 @@
                     </span>
                     <span>arXiv</span>
                   </a>
-                </span> -->
+                </span>
               </div>
             </div>
           </div>
